[gd_scene load_steps=12 format=3 uid="uid://bwvo5o6j5r3sx"]

[ext_resource type="Texture2D" uid="uid://b7yb3prvmpds2" path="res://sprite/towerDefense_tile298.png" id="1"]
[ext_resource type="Script" path="res://scripts/weapons/Weapon.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bhqn0mbqvduqs" path="res://sprite/tilesheet_transparent.png" id="3"]
[ext_resource type="PackedScene" path="res://scenes/weapons/Bullet.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://dfk33jfghlbbo" path="res://audio/guns/pistol.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://7juq37d4dwrq" path="res://audio/guns/pistol_empty.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://cjq7iq1ptn1c5" path="res://audio/guns/pistol_reload.wav" id="7"]
[ext_resource type="Texture2D" uid="uid://vjxrxjv40yko" path="res://sprite/light.png" id="8"]

[sub_resource type="Animation" id="1"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.005, 0.05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "reload"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -90.0, -90.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.9, 2, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(-0.75, 0), Vector2(-1, 0), Vector2(-0.75, 0), Vector2(-1.893, 0), Vector2(-1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_stop_reload"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fo6xy"]
_data = {
"muzzle_flash": SubResource("1"),
"reload": SubResource("2")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("2")
Bullet = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 0)
texture = ExtResource("3")
region_enabled = true
region_rect = Rect2(482, 279, 5, 3)

[node name="EndGun" type="Marker2D" parent="."]
position = Vector2(3, 0)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
position = Vector2(4, 2.38419e-07)
rotation = 1.57336
scale = Vector2(0.1, 0.1)
texture = ExtResource("1")

[node name="PointLight2D" type="PointLight2D" parent="MuzzleFlash"]
position = Vector2(0.0512695, 19.9999)
color = Color(1, 0.8, 0, 1)
texture = ExtResource("8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fo6xy")
}

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[node name="EmptySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")
